--- a/test.ipynb
+++ b/test.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel"
+    "class Test:\n",
+    "    def __init__(self):\n",
+    "        self.a = 1\n",
+    "        self.b = 2\n",
+    "        self.c = 3\n",
+    "\n",
+    "test = Test()\n",
+    "getattr(test, 'a')\n",
+    "getattr(None, 'b', None)"
    ]
   },
   {
