--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andalas\\AppData\\Local\\Temp\\ipykernel_20224\\697565236.py:6: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "  Base = declarative_base()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n",
+      "deque([(1,), (2,), (3,)])\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 33\u001b[0m\n\u001b[0;32m     27\u001b[0m session\u001b[38;5;241m.\u001b[39mcommit()\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# Create a query using case with conditions from different columns\u001b[39;00m\n\u001b[0;32m     30\u001b[0m stmt \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m     31\u001b[0m     select(\n\u001b[0;32m     32\u001b[0m         ExampleTable\u001b[38;5;241m.\u001b[39mid,\n\u001b[1;32m---> 33\u001b[0m         \u001b[38;5;28;43;01mcase\u001b[39;49;00m\u001b[43m(\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m            \u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m                \u001b[49m\u001b[43m(\u001b[49m\u001b[43mExampleTable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn1\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mColumn1 > 15\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[43m                \u001b[49m\u001b[43m(\u001b[49m\u001b[43mExampleTable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn2\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mA\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mColumn2 is A\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[43m                \u001b[49m\u001b[43m(\u001b[49m\u001b[43mExampleTable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn3\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mColumn3 < 10\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m \u001b[43m            \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     39\u001b[0m \u001b[43m            \u001b[49m\u001b[43melse_\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNo match\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m     40\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcondition_result\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     41\u001b[0m     )\n\u001b[0;32m     42\u001b[0m )\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m# Execute and display results\u001b[39;00m\n\u001b[0;32m     45\u001b[0m results \u001b[38;5;241m=\u001b[39m session\u001b[38;5;241m.\u001b[39mexecute(stmt)\u001b[38;5;241m.\u001b[39mall()\n",
+      "File \u001b[1;32md:\\Aplikasi SKK Migas\\Backend\\.venv\\Lib\\site-packages\\sqlalchemy\\sql\\_elements_constructors.py:850\u001b[0m, in \u001b[0;36mcase\u001b[1;34m(value, else_, *whens)\u001b[0m\n\u001b[0;32m    723\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcase\u001b[39m(\n\u001b[0;32m    724\u001b[0m     \u001b[38;5;241m*\u001b[39mwhens: Union[\n\u001b[0;32m    725\u001b[0m         typing_Tuple[_ColumnExpressionArgument[\u001b[38;5;28mbool\u001b[39m], Any], Mapping[Any, Any]\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    728\u001b[0m     else_: Optional[Any] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    729\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Case[Any]:\n\u001b[0;32m    730\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Produce a ``CASE`` expression.\u001b[39;00m\n\u001b[0;32m    731\u001b[0m \n\u001b[0;32m    732\u001b[0m \u001b[38;5;124;03m    The ``CASE`` construct in SQL is a conditional object that\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    848\u001b[0m \n\u001b[0;32m    849\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 850\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mCase\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mwhens\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43melse_\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43melse_\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Aplikasi SKK Migas\\Backend\\.venv\\Lib\\site-packages\\sqlalchemy\\sql\\elements.py:3333\u001b[0m, in \u001b[0;36mCase.__init__\u001b[1;34m(self, value, else_, *whens)\u001b[0m\n\u001b[0;32m   3321\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3322\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m   3324\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwhens \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m   3325\u001b[0m     (\n\u001b[0;32m   3326\u001b[0m         coercions\u001b[38;5;241m.\u001b[39mexpect(\n\u001b[0;32m   3327\u001b[0m             roles\u001b[38;5;241m.\u001b[39mExpressionElementRole,\n\u001b[0;32m   3328\u001b[0m             c,\n\u001b[0;32m   3329\u001b[0m             apply_propagate_attrs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m   3330\u001b[0m         )\u001b[38;5;241m.\u001b[39mself_group(),\n\u001b[0;32m   3331\u001b[0m         coercions\u001b[38;5;241m.\u001b[39mexpect(roles\u001b[38;5;241m.\u001b[39mExpressionElementRole, r),\n\u001b[0;32m   3332\u001b[0m     )\n\u001b[1;32m-> 3333\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (c, r) \u001b[38;5;129;01min\u001b[39;00m new_whens\n\u001b[0;32m   3334\u001b[0m ]\n\u001b[0;32m   3336\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   3337\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import case, select, Column, Integer, String\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "# Example table definition\n",
+    "class ExampleTable(Base):\n",
+    "    __tablename__ = 'example_table'\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    column1 = Column(Integer)\n",
+    "    column2 = Column(String)\n",
+    "    column3 = Column(Integer)\n",
+    "\n",
+    "# Create an in-memory SQLite database and table for demonstration\n",
+    "engine = create_engine('sqlite:///:memory:')\n",
+    "Base.metadata.create_all(engine)\n",
+    "session = Session(engine)\n",
+    "\n",
+    "# Adding some example data\n",
+    "session.add_all([\n",
+    "    ExampleTable(column1=10, column2='A', column3=5),\n",
+    "    ExampleTable(column1=20, column2='B', column3=15),\n",
+    "    ExampleTable(column1=30, column2='A', column3=25),\n",
+    "])\n",
+    "session.commit()\n",
+    "\n",
+    "# Create a query using case with conditions from different columns\n",
+    "stmt = (\n",
+    "    select(\n",
+    "        ExampleTable.id,\n",
+    "        case(\n",
+    "            (\n",
+    "                (ExampleTable.column1 > 15, 'Column1 > 15'),\n",
+    "                (ExampleTable.column2 == 'A', 'Column2 is A'),\n",
+    "                (ExampleTable.column3 < 10, 'Column3 < 10')\n",
+    "            ),\n",
+    "            else_='No match'\n",
+    "        ).label('condition_result')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Execute and display results\n",
+    "results = session.execute(stmt).all()\n",
+    "for result in results:\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "class Test:\n",
     "    def __init__(self):\n",
